String.format to use the instance method String.formatted