@@ -354,7 +354,7 @@ public final class Inserter {
 
 			if (LOG.isInfoEnabled()) {
 				long end = Calendar.getInstance().getTimeInMillis();
-				LOG.info(String.format("Verified %1$d statements in %2$.3f seconds",
+				LOG.info("Verified %1$d statements in %2$.3f seconds".formatted(
 					numStmts, (end - start) / 1000.0));
 			}
 		}
@@ -371,7 +371,7 @@ public final class Inserter {
 
 			if (LOG.isInfoEnabled()) {
 				long end = Calendar.getInstance().getTimeInMillis();
-				LOG.info(String.format("Added statements to \"%1$s\" in %2$.3f seconds",
+				LOG.info("Added statements to \"%1$s\" in %2$.3f seconds".formatted(
 					graphLabel, (end - start) / 1000.0));
 			}
 		}
